--- a/web/templates/head.tmpl
+++ b/web/templates/head.tmpl
@@ -30,7 +30,7 @@
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="/pages/stream/add" role="button"><i class="fas fa-plus-square"></i> Add stream</a>
+          <a class="nav-link" href="/pages/stream/add" role="button"><i class="fas fa-plus-square"></i> 添加视频流</a>
         </li>
       </ul>
     </nav>
@@ -54,17 +54,17 @@
               ">
                 <i class="nav-icon fas fa-tachometer-alt"></i>
                 <p>
-                  Dashboard
+                  仪表盘
                 </p>
               </a>
             </li>
-            <li class="nav-header">NAVIGATION</li>
+            <li class="nav-header">导航</li>
             <li class="nav-item ">
               <a href="/pages/stream/list" class="nav-link {{ if  (eq .page "stream_list") }}
                 active
               {{end}}">
                 <i class="fas fa-list-alt nav-icon"></i>
-                <p>Streams list</p>
+                <p>视频流列表</p>
               </a>
             </li>
             <li class="nav-item">
@@ -72,7 +72,7 @@
                 active
               {{end}}">
                 <i class="fas fa-plus-square nav-icon"></i>
-                <p>Add stream</p>
+                <p>添加视频流</p>
               </a>
             </li>
 
@@ -81,17 +81,17 @@
                 active
               {{end}}">
                 <i class="fas fa-th-large nav-icon"></i>
-                <p>Full multiview</p>
+                <p>完整多视图</p>
               </a>
             </li>
-            <li class="nav-header">MISCELLANEOUS</li>
+            <li class="nav-header">杂项</li>
             <li class="nav-item">
               <a href="/pages/documentation" class="nav-link
               {{ if eq .page "documentation"}}
                 active
               {{end}}">
                 <i class="nav-icon fas fa-file"></i>
-                <p>Documentation</p>
+                <p>文档</p>
               </a>
             </li>
           </ul>
