将遗漏的字段改成中文

--- a/web/templates/add_stream.tmpl
+++ b/web/templates/add_stream.tmpl
@@ -25,7 +25,7 @@
         <div class="col-12">
           <div class="card card-primary">
             <div class="card-header">
-              <h3 class="card-title">Main channel<small> parameters</small></h3>
+              <h3 class="card-title">主 通道<small> 参数</small></h3>
             </div>
               <div class="card-body">
                 <form class="stream-form main-form">
@@ -42,7 +42,7 @@
                 <div class="form-group">
                   <label for="inputStatus">视频流类型</label>
                   <select class="form-control custom-select" name="stream-ondemand">
-                    <option selected disabled><small>Select One</small></option>
+                    <option selected disabled><small>选择一项</small></option>
                     <option value="1">仅按需</option>
                     <option value="0">持久连接</option>
                   </select>
@@ -63,7 +63,7 @@
 
         <div class="row  mb-3">
             <div class="col-12">
-              <button type="button" onclick="addChannel()" class="btn btn-secondary">添加频道</button>
+              <button type="button" onclick="addChannel()" class="btn btn-secondary">添加通道</button>
               <button type="button" onclick="addStreamSubmit()" class="btn btn-primary">保存流</button>
             </div>
         </div>
