--- a/web/templates/documentation.tmpl
+++ b/web/templates/documentation.tmpl
@@ -3,12 +3,12 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h1 class="m-0 text-dark">Documentation</h1>
+        <h1 class="m-0 text-dark">文档</h1>
       </div>
     <div class="col-sm-6">
       <ol class="breadcrumb float-sm-right">
-        <li class="breadcrumb-item"><a href="/">Home</a></li>
-        <li class="breadcrumb-item active">Documentation</li>
+        <li class="breadcrumb-item"><a href="/">首页</a></li>
+        <li class="breadcrumb-item active">文档</li>
       </ol>
     </div>
   </div>
@@ -20,10 +20,10 @@
     <div class="row">
       <div class="col-12">
         <p>
-          <a href="https://github.com/deepch/RTSPtoWeb/tree/master/docs/api.md">API documentation</a> is available in the GitHub repository.
+          <a href="https://github.com/haowee/RTSPtoWeb/tree/master/docs/api.md">API 文档</a> 可从 GitHub 仓库获取.
         </p>
         <p>
-          See the project <a href="https://github.com/deepch/RTSPtoWeb#readme">README</a> for installation and configuration instructions.
+          查看项目 <a href="https://github.com/haowee/RTSPtoWeb#readme">README</a> 获取安装和配置说明.
         </p>
       </div>
     </div>
