--- a/web/templates/index.tmpl
+++ b/web/templates/index.tmpl
@@ -19,7 +19,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-12">
-        <h5 class="mt-4 mb-2">Streams ({{ len .streams}})</h5>
+        <h5 class="mt-4 mb-2">视频流 ({{ len .streams}})</h5>
       </div>
     </div>
 
@@ -47,7 +47,7 @@
                 <div class="carousel-item {{ if eq $k "0"}} active {{end}}">
                   <img class="d-block w-100 stream-img fix-height" channel="{{$k}}" src="/../static/img/noimage.svg">
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>Channel: {{$k}}</h5>
+                    <h5>通道: {{$k}}</h5>
                   </div>
                 </div>
                 {{end}}
@@ -107,8 +107,8 @@
 
 
 
-                    <a class="btn btn-secondary btn-flat btn-xs" href="/pages/stream/edit/{{$key}}"><i class="fas fa-edit"></i> Edit</a>
-                    <a class="btn btn-danger btn-flat btn-xs" onclick="deleteStream('{{ $key }}')" href="#"><i class="fas fa-times"></i> Delete</a>
+                    <a class="btn btn-secondary btn-flat btn-xs" href="/pages/stream/edit/{{$key}}"><i class="fas fa-edit"></i> 编辑</a>
+                    <a class="btn btn-danger btn-flat btn-xs" onclick="deleteStream('{{ $key }}')" href="#"><i class="fas fa-times"></i> 删除</a>
                 </div>
               </div>
             </div>
