--- a/web/templates/play_all.tmpl
+++ b/web/templates/play_all.tmpl
@@ -3,12 +3,12 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h1 class="m-0 text-dark">Comparison page</h1>
+        <h1 class="m-0 text-dark">对比页</h1>
       </div>
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
-          <li class="breadcrumb-item"><a href="/">Home</a></li>
-          <li class="breadcrumb-item active">Comparison page</li>
+          <li class="breadcrumb-item"><a href="/">首页</a></li>
+          <li class="breadcrumb-item active">对比页</li>
         </ol>
       </div>
     </div>
@@ -93,7 +93,7 @@
                     <div class="carousel-item {{ if eq $k "0"}} active {{end}}">
                       <img class="d-block w-100 stream-img fix-height" channel="{{$k}}" src="/../static/img/noimage.svg">
                       <div class="carousel-caption d-none d-md-block">
-                        <h5>Channel: {{$k}}</h5>
+                        <h5>通道: {{$k}}</h5>
                       </div>
                     </div>
                     {{end}}
@@ -149,8 +149,8 @@
                         <a class="btn btn-info btn-flat btn-xs" href="/pages/player/webrtc/{{$key}}/0"><i class="fas fa-play"></i> WebRTC</a>
                         <a class="btn btn-info btn-flat btn-xs" href="/pages/player/all/{{$key}}/0"><i class="fas fa-play"></i> ALL</a>
                         {{end}}
-                        <a class="btn btn-secondary btn-flat btn-xs" href="/pages/stream/edit/{{$key}}"><i class="fas fa-edit"></i> Edit</a>
-                        <a class="btn btn-danger btn-flat btn-xs" onclick="deleteStream('{{ $key }}')" href="#"><i class="fas fa-times"></i> Delete</a>
+                        <a class="btn btn-secondary btn-flat btn-xs" href="/pages/stream/edit/{{$key}}"><i class="fas fa-edit"></i> 编辑</a>
+                        <a class="btn btn-danger btn-flat btn-xs" onclick="deleteStream('{{ $key }}')" href="#"><i class="fas fa-times"></i> 删除</a>
                     </div>
                   </div>
                 </div>
