--- a/web/templates/play_mse.tmpl
+++ b/web/templates/play_mse.tmpl
@@ -3,12 +3,12 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h1 class="m-0 text-dark">Play mse video</h1>
+        <h1 class="m-0 text-dark">播放 MSE 视频</h1>
       </div>
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
-          <li class="breadcrumb-item"><a href="/">Home</a></li>
-          <li class="breadcrumb-item active">Play mse video</li>
+          <li class="breadcrumb-item"><a href="/">首页</a></li>
+          <li class="breadcrumb-item active">播放 MSE 视频</li>
         </ol>
       </div>
     </div>
