--- a/web/templates/stream_list.tmpl
+++ b/web/templates/stream_list.tmpl
@@ -3,12 +3,12 @@
   <div class="container-fluid">
     <div class="row mb-2">
       <div class="col-sm-6">
-        <h1 class="m-0 text-dark">Streams list</h1>
+        <h1 class="m-0 text-dark">视频流列表</h1>
       </div>
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
-          <li class="breadcrumb-item"><a href="/">Home</a></li>
-          <li class="breadcrumb-item active">Streams list</li>
+          <li class="breadcrumb-item"><a href="/">首页</a></li>
+          <li class="breadcrumb-item active">视频流列表</li>
         </ol>
       </div>
     </div>
@@ -40,7 +40,7 @@
                 <div class="carousel-item {{ if eq $k "0"}} active {{end}}">
                   <img class="d-block w-100 stream-img fix-height" channel="{{$k}}" src="/../static/img/noimage.svg">
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>Channel: {{$k}}</h5>
+                    <h5>通道: {{$k}}</h5>
                   </div>
                 </div>
                 {{end}}
@@ -100,8 +100,8 @@
 
 
 
-                    <a class="btn btn-secondary btn-flat btn-xs" href="/pages/stream/edit/{{$key}}"><i class="fas fa-edit"></i> Edit</a>
-                    <a class="btn btn-danger btn-flat btn-xs" onclick="deleteStream('{{ $key }}')" href="#"><i class="fas fa-times"></i> Delete</a>
+                    <a class="btn btn-secondary btn-flat btn-xs" href="/pages/stream/edit/{{$key}}"><i class="fas fa-edit"></i> 编辑</a>
+                    <a class="btn btn-danger btn-flat btn-xs" onclick="deleteStream('{{ $key }}')" href="#"><i class="fas fa-times"></i> 删除</a>
                 </div>
               </div>
             </div>
